<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AsilApp</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Asylum Seeker</string>
    <string name="users">Default Users</string>
    <string name="click_default_user">Click here if you want to log as Default User</string>
    <string name="btn_add">Measure</string>
    <string name="btn_healthcare">Healthcare</string>
    <string name="btn_my_patients">Patients</string>
    <string name="btn_home">Home</string>
    <string name="btn_my_account">Account</string>
    <string name="home"> Home </string>
    <string name="healthcare">Healthcare</string>
    <string name="my_patients"> My Patients </string>
    <string name="my_account"> My Account </string>
    <string name="my_data"> My Date </string>
    <string name="press_back_again"> Press back again to exit </string>
    <string name="measurements">Measurements</string>
    <string name="last_measurement">Last measurement</string>
    <string name="expenses">Expenses</string>
    <string name="category">Category</string>
    <string name="money_spent">Money spent</string>
    <string name="date_spent">Date spent</string>
    <string name="add_expense">Add new expense</string>
    <string name="add_expense2">Add expense</string>
    <string name="add_expense_desc">Add new expense by specifying category, money spent and purchase date.</string>
    <string name="total_expenses">Total expenses</string>
    <string name="last_month_expenses">last month\'s expenses</string>
    <string name="last_week_expenses">last week\'s expenses</string>
    <string name="rating_title">Rate Asylum House</string>
    <string name="rating_description">Rate this Asylum House</string>
    <string name="history">History</string>
    <string name="treatment">Treatment</string>
    <string name="add">Add</string>
    <string name="new_treatment">New treatment</string>
    <string name="decision_account" translatable="false">Who are you?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgett_pass">Did you forget the password? Click Here!</string>
    <string name="create_account">You don\'t have an account? Create Now!</string>
    <string name="login">Did you have an account? Log in!</string>
    <string name="login_doctor" translatable="false">Are you a doctor? Log in!</string>
    <string name="login_doctor_lbl" translatable="false">Here you can access to your account!</string>
    <string name="login_qr_code_doctor_explain" translatable="false">You can access by scanning the QRcode of your badge</string>
    <string name="btn_qr_code_doctor" translatable="false">SCAN NOW</string>
    <string name="btn_login_patient" translatable="false">Aren\'t you a doctor? Log in as a patient!</string>
    <string name="numero_registrazione" translatable="false">Registration number</string>
    <string name="select_specilization" translatable="false">Choose your specialization</string>
    <string name="number_phone" translatable="false">Phone number</string>
    <string name="incorrect_login">Incorrect email or password!</string>
    <string name="registration_failed">Registration error!</string>
    <string name="registration_success">Registration success!</string>
    <string name="user_already_exists">Users Already Exists!</string>
    <string name="user_not_exists">Check Email or Password!</string>
    <string name="error">Error!</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="empty_fields_email" translatable="false">Please complete the email field</string>
    <string name="empty_fields_password" translatable="false">Please complete the password field</string>
    <string name="empty_fields_nome" translatable="false">Please complete the name field</string>
    <string name="empty_fields_cognome" translatable="false">Please complete the surname field</string>
    <string name="empty_fields_data" translatable="false">Please complete the date of birth field</string>
    <string name="empty_fields_region" translatable="false">Please complete the region field</string>
    <string name="empty_fields_registration_number" translatable="false">Please complete the registration number field</string>
    <string name="empty_fields_specialization" translatable="false">Please complete the specialization field</string>
    <string name="measure">Measure</string>
    <string name="explain_measure">Here you can connect to the biomedical equipment container </string>
    <string name="last_measure">Last Measure</string>
    <string name="last_measure_explain">Here you can see the result of your last Measure</string>
    <string name="attention">Attention!</string>
    <string name="explain_permission_camera">You must allow the use of the camera to use this function</string>
    <string name="explain_permission_gallery">You must allow the use of the photo gallery to use this function</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="go_back">Go back</string>
    <string name="going_back">Go back?</string>
    <string name="unsaved_changes">Any unsaved changes will be lost</string>
    <string name="fill_inputs">Fill all inputs to proceed</string>
    <string name="insert_start_date">Insert start date</string>
    <string name="insert_end_date">Insert end date</string>
    <string name="treatment_plan">Treatment plan</string>
    <string name="treatment_goal">What is the tratment goal?</string>
    <string name="insert_goal">Insert goal</string>
    <string name="treatment_duration">Treatment duration</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="btn_continue">Continue</string>
    <string name="no_end_date">No end date</string>
    <string name="medications">Medications</string>
    <string name="medication">Medication</string>
    <string name="notes">Notes</string>
    <string name="additional_notes">Additional notes</string>
    <string name="treatment_goal_empty">Treatment goal cannot be empty</string>
    <string name="insert_medication">Insert medication</string>
    <string name="how_to_take_medication">How to take this medication?</string>
    <string name="medication_name">What is the medication name?</string>
    <string name="how_regularly">How regularly?</string>
    <string name="select">Select</string>
    <string name="save_password" translatable="false">Automatic login</string>
    <string name="save_password_explain" translatable="false">Save password to login automatically?</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="birth_date">Enter your Birth Date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_not_match">Passwords do not match</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="empty_fields" translatable="false">Fill all inputs!</string>
    <string name="good_morning">Good morning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_note">Insert a note</string>
    <string name="select_time">Select time</string>
    <string name="mental_health_tips">Mental health</string>
    <string name="healthy_food_tips">Healthy food</string>
    <string name="scan_qr_code_container">Scan the QR that appears on the Container to connect!</string>
    <string name="make_measurements">Make your measurements</string>
    <string-array name="searchOnMaps_array">
        <item>Clinic</item>
        <item>Pharmacy</item>
        <item>Post office</item>
        <item>Italian School</item>
        <item>Church</item>
        <item>Municipality</item>
        <item>Asylum House</item>
    </string-array>
    <string name="total">Total</string>
    <string-array name="categories">
        <item>Exam</item>
        <item>Medication</item>
        <item>Treatment</item>
        <item>Other</item>
    </string-array>
    <string name="enter_expenses">Enter your expenses</string>
    <string name="medication_buy">View the medications you need to buy</string>
    <string name="expense_analysis">Expense analysis</string>
    <string name="expense_analysis_explain">Here you can see the analysis of your expenses</string>
    <string name="other">Other</string>
    <string name="exams">Exams</string>
    <string name="no_medication">No medications to buy</string>
    <string name="temporal_analysis">Temporal analysis</string>
    <string name="add_expense_dialog_title">Add this new expense?</string>
    <string name="add_expense_dialog_message">Confirm the adding of this new expense.</string>
    <string name="check_desc">Check medication to set it bought</string>
    <string name="analysis_week">Week</string>
    <string name="analysis_month">Month</string>
    <string name="expenses_medicines">Medication expenses</string>
    <string name="expenses_therapies">Therapy expenses</string>
    <string name="expenses_others">Other expenses</string>
    <string name="expenses_examinations">Examination expenses</string>
    <string name="entry_format">Your %1$s were: %2$.2f €</string>
    <string name="no_doctor_assigned">No doctor assigned yet.</string>
    <string name="enter_valid_date">Please, enter a valid date</string>
    <string name="valid_amount">Please enter a valid amount</string>
    <string name="decimals_error">The amount cannot have more than two decimal places</string>
    <string name="added_successfully">Expense added successfully</string>
    <string name="field_required_error">This field is required</string>
    <string name="error_user_not_found">Error: user not found</string>
    <string name="confirmation_message">Are you sure?</string>
    <string name="select_nearby">Please select a nearby</string>
    <string name="you_reviewed">You reviewed:</string>
    <string name="no_vitals_found">No vitals found</string>
    <string name="no_vitals_found_descr">Register vitals by connecting to the container.</string>
</resources>