<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/seed"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout
        android:id="@+id/decision_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_relative_layout"
        android:padding="20dp">

        <TextView
            android:id="@+id/lblTextText"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/lblsubText"
            style="@style/SubtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblTextText"
            android:layout_centerHorizontal="true"
            android:text="@string/decision_account" />

        <LinearLayout
            android:id="@+id/decision_standard_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblsubText"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLoginPatient"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_below="@+id/lblsubText"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/patient"
                android:layout_marginBottom="16dp"
                app:icon="@drawable/person_patient" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLoginDoctor"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_below="@+id/lblsubText"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text="@string/doctor"
                android:layout_gravity="center_vertical"
                app:icon="@drawable/stethoscope" />
        </LinearLayout>

        <TextView
            android:id="@+id/default_users"
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/decision_standard_login_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/click_default_user"></TextView>
    </RelativeLayout>
</RelativeLayout>