<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutNoTreatmentFound"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    tools:context=".fragments.TreatmentFragment">

    <ImageView
        android:id="@+id/imageViewNoTreatmentFound"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/treatment"
        android:src="@drawable/measure_illustration" />

    <TextView
        android:id="@+id/noVitalsFoundTitle"
        style="@style/TitleText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:text="@string/no_vitals_found"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/noVitalsFoundSubtitle"
        style="@style/SubtitleText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:text="@string/no_vitals_found_descr"
        android:textColor="@color/colorPrimary" />

</LinearLayout>