<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctor.fragments.MyPatientsFragment">
    <RelativeLayout
        android:id="@+id/static_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/measure_title"
                style="@style/TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure"
                android:layout_margin="16dp" />

            <TextView
                android:id="@+id/measure_explain"
                style="@style/SubtitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/measure_title"
                android:text="@string/explain_measure" />
            <Button
                android:id="@+id/btnMeasure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/measure"
                android:textSize="15dp"
                android:layout_below="@+id/measure_explain"
                android:layout_marginTop="20dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/frameLayout_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_container"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/last_measure_title"
                style="@style/SubtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_measure"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/last_measure_explain"
                style="@style/CardViewTitleText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_measure_explain"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/last_measure_data"
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_measure_explain"
                android:layout_marginTop="110dp"
                android:layout_marginLeft="20dp"/>
        </RelativeLayout>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/fragment_containter_qr_code_connection"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</RelativeLayout>
