<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutTreatment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                style="@style/CardViewTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="0dp"
                android:text="@string/treatment_goal" />

            <TextView
                android:id="@+id/dateText"
                style="@style/CardViewDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="01/01/2024 - 01/02/2024" />

            <TextView
                android:id="@+id/subtitleText"
                style="@style/CardViewSubtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="0dp"
                android:text="@string/medications" />

            <TextView
                android:id="@+id/regularText"
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="I miei farmaci" />

            <TextView
                android:id="@+id/noteText"
                style="@style/CardViewSubtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="0dp"
                android:text="@string/notes" />

            <TextView
                android:id="@+id/noteContentText"
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="Misurare la pressione arteriosa 2 volte al giorno" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>